--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <ul class="impact-list">
                 <li><strong>Finance Club Leadership:</strong> As co-president, I lead finance projects, organize investment competitions, and mentor new members to understand key financial principles.</li>
                 <li><strong>Band Council:</strong> Serving as the secretary, I manage meeting logistics, document band events, and support the growth of our music program to inspire younger students.</li>
-                <li><strong>AP Computer Science Teaching Assistant:</strong> I assist students with coursework, encourage collaborative problem-solving, and help my instructor with administrative tasks to create a productive class environment.</li>
+                <li><strong>AP CSP Teaching Assistant:</strong> I assist students with coursework, encourage collaborative problem-solving, and help my instructor with administrative tasks to create a productive class environment.</li>
                 <li><strong>Community Engagement with Pop Dancers League:</strong> As the Junior Video Content Coordinator, I edit and manage content for TikTok, Instagram, and YouTube, helping the organization grow its online presence.</li>
             </ul>
         </section>
